--- a/site/index.html
+++ b/site/index.html
@@ -142,6 +142,9 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qua</p>
       </section>
       </section>
+      <section class="servicesright">
+
+      </section>
     </section>
   </div>
 
