--- a/site/index.html
+++ b/site/index.html
@@ -143,8 +143,50 @@
       </section>
       </section>
       <section class="servicesright">
-
+        <section class="serviceslefttext">
+          <h2>Lorem Ipsum Dolar Sit</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qua</p>
+        </section>
+        <section class="serviceslefttext2">
+          <h2>Lorem Ipsum Dolar Sit</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qua</p>
+        </section>
+        <section class="serviceslefttext2">
+          <h2>Lorem Ipsum Dolar Sit</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qua</p>
+        </section>
       </section>
+    </section>
+    <section class="pricecards">
+        <h2>Trusted Since 2001<br>We are Travel Agent</h2>
+        <ul>
+          <li class="shadow">
+            <img src="img/links.png">
+            <span>7 Day + 6 Night</span>
+            <span class="cities">New York + Paris</span>
+            <span>lorem ipsum dolor sit, amet consectetur adipisicing elit.</span>
+            <span class="price">&dollar;600</span>
+            <a href="" class="btn" title="Book Now">Book Now</a>
+          </li>
+          <li>
+            <div>
+            <img src="img/midden.png">
+            <span>7 Day + 6 Night</span>
+            <span class="cities">New York + Paris</span>
+            <span>lorem ipsum dolor sit, amet consectetur adipisicing elit.</span>
+            <span class="price">&dollar;600</span>
+            <a href="" class="btn1" title="Book Now">Book Now</a>
+            </div>
+          </li>
+          <li class="shadow1">
+            <img src="img/rechts.png">
+            <span>7 Day + 6 Night</span>
+            <span class="cities">New York + Paris</span>
+            <span>lorem ipsum dolor sit, amet consectetur adipisicing elit.</span>
+            <span class="price">&dollar;600</span>
+            <a href="" class="btn" title="Book Now">Book Now</a>
+          </li>
+        </ul>
     </section>
   </div>
 
