--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,7 @@
   <title></title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
@@ -156,6 +157,33 @@
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qua</p>
         </section>
       </section>
+    </section>
+    <section class="threecards">
+      <section class="cardsheader">
+        <h2>Trusted Since 2001<br>We are Travel Agent</h2>
+      </section>
+      <ul>
+        <li class="card">
+          <img src="img/car.png">
+          <span class="margin-top"><h3>Low Budget Trip</h3></span>
+          <span class="geel"><h1>$500</h1></span>
+          <span class="vinkjes2"></span>
+        </li>
+        <li class="card">
+          <div>
+          <img src="img/train.png">
+          <span class="margin-top"><h3>Mid Budget Trip</h3></span>
+          <span class="geel"><h1>$800</h1></span>
+          <span class="vinkjes2"></span>
+          </div>
+        </li>
+        <li class="">
+          <img src="img/vliegtuig.png">
+          <span class="margin-top"><h3>High Budget Trip</h3></span>
+          <span class="geel"><h1>$1000</h1></span>
+          <span class="vinkjes2"></span>
+        </li>
+      </ul>
     </section>
     <section class="pricecards">
         <h2>Trusted Since 2001<br>We are Travel Agent</h2>
