--- a/site/index.html
+++ b/site/index.html
@@ -23,42 +23,37 @@
 </head>
 
 <body>
-  <!--[if IE]>
-    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-  <![endif]-->
-
-
-
-
-
   <div id="container">
     <section class="banner">
       <header>
         <section class="boven">
           <section class="left">
-            <p><i class="fas fa-phone" id="yellow"></i> +123 4567 8900</p>
-            <p><i class="fas fa-envelope" id="yellow"></i>free@psdfreebies.com</p>
+            <ul>
+            <li><i class="fas fa-phone" id="yellow"></i> +123 4567 8900</li>
+            <li><i class="fas fa-envelope" id="yellow"></i>free@psdfreebies.com</li><p>
           </section>
           <section class="right">
-            <p class="nav1"><i class="fab fa-facebook-f" id="yellow"></i>   <i class="fab fa-google-plus-g" id="yellow"></i>  <i class="fab fa-vk" id="yellow"></i>  <i class="fab fa-youtube" id="yellow"></i></p>
-            <p class="nav"><i class="fas fa-user" id="yellow"></i>Login</p>
-            <p class="none"><i class="fas fa-key" id="yellow"></i>Sign Up</p>
+            <li><i class="fab fa-facebook-f" id="yellow"></i>   <i class="fab fa-google-plus-g" id="yellow"></i>  <i class="fab fa-vk" id="yellow"></i>  <i class="fab fa-youtube" id="yellow"></i></li>
+            <li><i class="fas fa-user" id="yellow"></i>Login</li>
+            <li><i class="fas fa-key" id="yellow"></i>Sign Up</li>
+          </ul>
           </section>
         </section>
         <section class="midden"></section>
         <section class="beneden">
+          <ul>
           <section class="left2">
             <p><img src="img/logo.png" alt="logo"></p>
           </section>
           <section class="right">
-            <p>HOME</p>
-            <p>DESTINATION</p>
-            <p>DISCOUNT</p>
-            <p>ABOUT</p>
-            <p>BLOG</p>
-            <p>CONTACT</p>
-            <hr class="streepje">
+            <li class="active">HOME</li>
+            <li>DESTINATION</li>
+            <li>DISCOUNT</li>
+            <li>ABOUT</li>
+            <li>BLOG</li>
+            <li>CONTACT</li>
           </section>
+          </ul>
         </section>
       </header>
       <section class="bannertekst">
